[project]
name = "stylegan2-ada-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
    "imageio-ffmpeg==0.4.3",
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.2.9",
    "ninja>=1.13.0",
    "pyspng>=0.1.4",
    "requests>=2.32.4",
    "spicy>=0.16.0",
    "torch>=2.8",
    "torchaudio>=2.8",
    "torchvision>=0.15.2",
    "wandb>=0.23.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
